--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app {
+  font-family: Helvetica, Arial, sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  /* justify-content: center; */
+
+  min-height: 100vh;
+
+  background-color: cadetblue;
+}
+
+.header {
+  align-self: flex-start;
+  background-color: blue;
+  width: 100vw;
+  height: 20%;
+  padding: 10px;
+
   color: white;
+
+  display: flex;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.accentcolor {
+  color: red;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.counter {
+  color: white;
+  margin-left: 10px;
+
+  transition: color 1s;
+}
+
+.counter:hover {
+  color: red;
+  cursor: cell;
 }
