--- a/src/App.css
+++ b/src/App.css
@@ -4,29 +4,69 @@
   box-sizing: border-box;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
 .app {
   font-family: Helvetica, Arial, sans-serif;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: grid;
+  grid-template-rows: 10vh 85vh 5vh;
   /* justify-content: center; */
 
-  min-height: 100vh;
+  height: 100vh;
 
-  background-color: cadetblue;
+  color: white;
+  background-color: blue;
 }
 
 .header {
-  align-self: flex-start;
+  align-self: start;
   background-color: blue;
+  height: 100%;
   width: 100vw;
-  height: 20%;
-  padding: 10px;
+  padding: 0 30px;
 
   color: white;
 
   display: flex;
   align-items: center;
+}
+
+.main {
+  height: 100%;
+  overflow: scroll;
+}
+
+.centered {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer {
+  align-self: end;
+  height: 100%;
+  width: 100vw;
+  padding: 0 30px;
+
+  color: white;
+  background-color: blue;
+
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.footer p {
+  font-weight: bold;
+}
+
+.footer a:hover {
+  color: red;
+  transition: color 1s;
 }
 
 .accentcolor {
