--- a/src/views/Home.css
+++ b/src/views/Home.css
@@ -5,10 +5,33 @@
 
 .img-container {
   height: 20vh;
-  background-color: red;
+  overflow: hidden;
+  position: relative;
 }
 
 .pod-img {
   width: 100%;
   min-height: 100%;
+  object-fit: cover;
+  display: block;
+}
+
+.pod-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 20vh;
+  background-color: rgb(0, 0, 255, 0.5);
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+
+  transition: opacity 1s ease-in-out;
+}
+
+.pod-overlay:hover {
+  opacity: 1;
 }
